// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders colored progress bar 1`] = `
<View
  accessibilityRole="progressbar"
  accessibilityState={
    {
      "busy": true,
    }
  }
  accessibilityValue={
    {
      "max": 100,
      "min": 0,
      "now": 20,
    }
  }
  accessible={true}
  onLayout={[Function]}
  style={false}
  testID="progress-bar"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(231, 224, 236, 1)",
        "height": 4,
        "opacity": 0,
        "overflow": "hidden",
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "red",
          "flex": 1,
          "transform": [
            {
              "translateX": -50,
            },
            {
              "scaleX": 0.0001,
            },
          ],
          "width": 100,
        }
      }
      testID="progress-bar-fill"
    />
  </View>
</View>
`;

exports[`renders hidden progress bar 1`] = `
<View
  accessibilityRole="progressbar"
  accessibilityState={
    {
      "busy": false,
    }
  }
  accessibilityValue={
    {
      "max": 100,
      "min": 0,
      "now": 20,
    }
  }
  accessible={true}
  onLayout={[Function]}
  style={false}
  testID="progress-bar"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(231, 224, 236, 1)",
        "height": 4,
        "opacity": 0,
        "overflow": "hidden",
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
          "flex": 1,
          "transform": [
            {
              "translateX": -50,
            },
            {
              "scaleX": 0.0001,
            },
          ],
          "width": 100,
        }
      }
      testID="progress-bar-fill"
    />
  </View>
</View>
`;

exports[`renders indeterminate progress bar 1`] = `
<View
  accessibilityRole="progressbar"
  accessibilityState={
    {
      "busy": true,
    }
  }
  accessibilityValue={{}}
  accessible={true}
  onLayout={[Function]}
  style={false}
  testID="progress-bar"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(231, 224, 236, 1)",
        "height": 4,
        "opacity": 0,
        "overflow": "hidden",
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
          "flex": 1,
          "transform": [
            {
              "translateX": -50,
            },
            {
              "scaleX": 0.0001,
            },
          ],
          "width": 100,
        }
      }
      testID="progress-bar-fill"
    />
  </View>
</View>
`;

exports[`renders progress bar with specific progress 1`] = `
<View
  accessibilityRole="progressbar"
  accessibilityState={
    {
      "busy": true,
    }
  }
  accessibilityValue={
    {
      "max": 100,
      "min": 0,
      "now": 20,
    }
  }
  accessible={true}
  onLayout={[Function]}
  style={false}
  testID="progress-bar"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(231, 224, 236, 1)",
        "height": 4,
        "opacity": 0,
        "overflow": "hidden",
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
          "flex": 1,
          "transform": [
            {
              "translateX": -50,
            },
            {
              "scaleX": 0.0001,
            },
          ],
          "width": 100,
        }
      }
      testID="progress-bar-fill"
    />
  </View>
</View>
`;
